crates/loom/tests/snapshots/cli_help__loom_gate_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"gate\"])"
---
Quality gate — annotation-dispatched verifiers and LLM rubric

Usage: loom gate [OPTIONS] [COMMAND]

Commands:
  status         Read cached gate results for an explicit scope.
  audit          Run deterministic verification followed by LLM review.
  verify         Run scope-derived deterministic verifier lanes.
  check          Run only `[check]`-tier annotations.
  test           Run only `[test]`-tier annotations.
  system         Run only `[system]`-tier annotations.
  review         Run criterion-attached judges and the LLM rubric.
  judge          Run only criterion-attached `[judge]` verifiers.
  rubric         Run only the rubric walk.
  mint           Materialize gate findings into remediation work.
  verify-marker  Validate the current gate marker.
  help           Print this message or the help of the given subcommand(s)

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
      --host-key          Explicitly allow ambient host Git credentials and signing config
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
