crates/loom/tests/snapshots/cli_help__loom_gate_review_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"gate\", \"review\"])"
---
Run criterion-attached judges and the LLM rubric.

Usage: loom gate review [OPTIONS]

Options:
      --files <PATH>...   Scope to verifiers whose declared inputs intersect this file set
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
      --host-key          Explicitly allow ambient host Git credentials and signing config
      --target <TARGET>   Run annotations whose target exactly matches this string
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
      --diff <RANGE>      Scope to a git diff range
      --tree              Scope to every file in the workspace
  -b, --bead <ID>         Attach review context to an explicit diff scope
  -h, --help              Print help
