crates/loom/tests/snapshots/cli_help__loom_gate_status_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"gate\", \"status\"])"
---
Read cached gate results for an explicit scope.

Usage: loom gate status [OPTIONS]

Options:
      --files <PATH>...   Scope to verifiers whose declared inputs intersect this file set
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
      --diff <RANGE>      Scope to a git diff range
      --host-key          Explicitly allow ambient host Git credentials and signing config
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
      --tree              Scope to every file in the workspace
  -h, --help              Print help
